src/snapshots/bminor__parser__test__primary_expression-5.snap
---
source: src/parser.rs
expression: "parse_expression(\"(2)\")"
---
Ok(
    Grouping {
        expression: Literal {
            value: Token {
                kind: IntegerLiteral,
                lexeme: "2",
                line: 0,
            },
        },
    },
)
