src/snapshots/bminor__parser__test__primary_expression.snap
---
source: src/parser.rs
expression: "parse_expression(\"'a'\")"
---
Ok(
    Literal {
        value: Token {
            kind: CharLiteral,
            lexeme: "'a'",
            line: 0,
        },
    },
)
