src/snapshots/bminor__parser__test__print_statements-2.snap
---
source: src/parser.rs
expression: "parse_statement(\"print 1;\")"
---
Ok(
    Print {
        expressions: [
            Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
            },
        ],
    },
)
