src/snapshots/bminor__parser__test__print_statements-4.snap
---
source: src/parser.rs
expression: "parse_statement(\"print 1\")"
---
Err(
    UnexpectedToken(
        "expect ';' after statement",
    ),
)
