src/snapshots/bminor__parser__test__print_statements-5.snap
---
source: src/parser.rs
expression: "parse_statement(\"print fun();\")"
---
Ok(
    Print {
        expressions: [
            Call {
                name: Token {
                    kind: Identifier,
                    lexeme: "fun",
                    line: 0,
                },
                params: [],
            },
        ],
    },
)
