src/snapshots/bminor__parser__test__print_statements.snap
---
source: src/parser.rs
expression: "parse_statement(\"print;\")"
---
Err(
    UnexpectedToken(
        "expect expression",
    ),
)
