src/snapshots/bminor__parser__test__return_statements-2.snap
---
source: src/parser.rs
expression: "parse_statement(\"return;\")"
---
Ok(
    Return {
        value: None,
    },
)
