src/snapshots/bminor__parser__test__return_statements-3.snap
---
source: src/parser.rs
expression: "parse_statement(\"return 1;\")"
---
Ok(
    Return {
        value: Some(
            Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
            },
        ),
    },
)
