src/snapshots/bminor__parser__test__return_statements.snap
---
source: src/parser.rs
expression: "parse_statement(\"return\")"
---
Err(
    UnexpectedToken(
        "expect ';' after statement",
    ),
)
