src/snapshots/bminor__parser__test__subscript_expression-2.snap
---
source: src/parser.rs
expression: "parse_expression(\"x[1\")"
---
Err(
    UnexpectedToken(
        "expect ']' after key",
    ),
)
