src/snapshots/bminor__parser__test__subscript_expression-5.snap
---
source: src/parser.rs
expression: "parse_expression(\"x()[1] = 0\")"
---
Ok(
    Call {
        target: Token {
            kind: Identifier,
            lexeme: "x",
            line: 0,
        },
        args: [],
    },
)
